Fix metis light background in dark mode

--- a/src/main/webapp/content/scss/themes/_dark-variables.scss
+++ b/src/main/webapp/content/scss/themes/_dark-variables.scss
@@ -226,7 +226,7 @@ $md-resize-icon-color: $gray-400;
 $metis-light-gray: #979797;
 $metis-gray: #6a737d;
 $metis-blue: $link-color;
-$metis-light-blue: #e3ecf3;
+$metis-light-blue: #0e252d;
 $metis-green: #33cd32;
 $metis-course-discussion-select-bg: $neutral-dark;
 
